# signy

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west-ncs.yml  west.yml
esp-idf/signy/: CMakeLists.txt  Kconfig  idf_component.yml
examples/basic/: Kconfig  README.md  prj.conf
examples/basic/boards/: nrf9160dk_nrf9160_ns.conf
examples/basic/src/: main.c
examples/esp-idf/basic/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp-idf/basic/main/: CMakeLists.txt  Kconfig  idf_component.yml  main.c
examples/zephyr/basic/: CMakeLists.txt  Kconfig  README.md  app.overlay
examples/zephyr/basic/src/: main.c
include/signy/: signy.h
src/: base64.c  base64.h  signy.c
zephyr/: module.yml
